<resources>
    <string name="app_name">ColockumHillsideFarmApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Colockum Hillside Farm</string>
    <string name="nav_header_subtitle">suzanne@colockumhillsidefarm.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_store">Store</string>
    <string name="menu_vendor">Vendor</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>

    <string name="turkey_string">We raise specialty “Midget White” turkeys each year for Thanksgiving. " +
                    "Midget Whites love to spend their day foraging, so on our farm they enjoy a diet of free range shrub steppe findings supplemented with locally sourced, non-GMO, corn- and soy-free feed. " +
                    "This sought after breed takes about 7 months to grow to a compact 8-18 pounds, but rewards the chef with rich and juicy flavor. " +
                    "Watch our store for the opportunity to reserve your Thanksgiving bird!</string>


    <string name="pork_string">We raise Berkshire pork, a heritage breed preferred by restaurants for its rich marbling and delicious flavor.
        Customers often tell us that ours is the best pork they have ever eaten and our butchers often praise the quality of our pork and refer us to their own customers.</string>
    <string name="pork_practices_string_p1">We generally house our pigs in a hub and spoke system, where their shelter, feeders and waterers are in a fixed location, around which we move their spacious fence enclosure every two weeks.
        This allows the pigs to explore and forage in fresh areas and saves wear and tear on our land. In some cases, we intentionally move our pigs to flatter areas that we are converting into meat chicken pastures.
        Pigs are amazing bulldozers, and we have used their services to clear more than one area of rocks! They are cheerful and willing workers. </string>
    <string name="pork_practices_string_p2">We love Berkshire pigs’ easygoing, jolly personalities. They are curious and love to have their ears scratched. Our pigs enjoy locally sourced corn- and soy-free non-GMO feed and organic vegetable scraps from our own kitchen and garden. </string>
    <string name="about_us_poultry">Poultry and Eggs</string>
    <string name="about_us_pork">Pork</string>
    <string name="about_us_vegetables">Vegetables</string>
    <string name="about_us_chicken">Chicken</string>
    <string name="about_us_pig">Pig</string>
    <string name="about_us_carrot">Carrot</string>
    <string name="title_activity_edit_product">EditProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="tab_text_1">Products</string>
    <string name="tab_text_2">Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vendor_login"> <u>Vendor login.</u></string>
    <string name="create_account"> <u>Create account.</u></string>
</resources>