<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_store">

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.colockumhillsidefarmapp.customer.contact_us.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.colockumhillsidefarmapp.customer.about_us.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.colockumhillsidefarmapp.customer.recipes.RecipesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_store" />
    <fragment
        android:id="@+id/nav_store"
        android:name="com.example.colockumhillsidefarmapp.customer.store.StoreFragment"
        android:label="@string/menu_store"
        tools:layout="@layout/fragment_store" />
    <fragment
        android:id="@+id/nav_vendor"
        android:name="com.example.colockumhillsidefarmapp.vendor.VendorFragment"
        android:label="@string/menu_vendor"
        tools:layout="@layout/fragment_vendor" />
</navigation>