<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about_us.AboutUsFragment">

    <Button
        android:id="@+id/poultryandeggs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_poultry"
        app:layout_constraintBottom_toTopOf="@+id/pig"
        app:layout_constraintEnd_toEndOf="@+id/chicken"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/chicken"
        app:layout_constraintTop_toBottomOf="@+id/chicken"
        android:background="@drawable/round_button" />

    <Button
        android:id="@+id/pork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_pork"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/round_button"/>

    <Button
        android:id="@+id/vegetables"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_vegetables"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        android:background="@drawable/round_button"/>

    <ImageView
        android:id="@+id/chicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/about_us_chicken"
        android:src="@drawable/chickenpic"
        app:layout_constraintBottom_toTopOf="@+id/poultryandeggs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/about_us_pig"
        android:src="@drawable/pigpic"
        app:layout_constraintBottom_toTopOf="@+id/pork"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poultryandeggs" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cornpic"
        app:layout_constraintBottom_toTopOf="@+id/vegetables"
        app:layout_constraintEnd_toEndOf="@+id/pig"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/pig"
        app:layout_constraintTop_toBottomOf="@+id/pork" />

</androidx.constraintlayout.widget.ConstraintLayout>